Adding date comments above age cells.

--- a/Projection/Projection.vbproj
+++ b/Projection/Projection.vbproj
@@ -147,6 +147,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\star-struck.png" />
     <Content Include="scratch work.txt" />
     <Content Include="Projection-AddIn.dna">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
