--- a/Projection/Projection.vbproj
+++ b/Projection/Projection.vbproj
@@ -160,6 +160,15 @@
     <None Include="Resources\laugh4.png" />
     <None Include="Resources\laugh5.png" />
     <None Include="Resources\xd.png" />
+    <None Include="Resources\Get CM%281%29.png" />
+    <None Include="Resources\Get CM.png" />
+    <None Include="Resources\Get GU%281%29.png" />
+    <None Include="Resources\Get GU.png" />
+    <None Include="Resources\Get_CM_1_.png" />
+    <None Include="Resources\Get_GU_1_.png" />
+    <None Include="Resources\all triangle.png" />
+    <None Include="Resources\monthly triangle.png" />
+    <None Include="Resources\quarerly triangle.png" />
     <Content Include="scratch work.txt" />
     <Content Include="Projection-AddIn.dna">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
