--- a/Projection/Projection.vbproj
+++ b/Projection/Projection.vbproj
@@ -169,6 +169,8 @@
     <None Include="Resources\all triangle.png" />
     <None Include="Resources\monthly triangle.png" />
     <None Include="Resources\quarerly triangle.png" />
+    <None Include="Resources\MasterChef.png" />
+    <None Include="Resources\TheMasterChef.png" />
     <Content Include="scratch work.txt" />
     <Content Include="Projection-AddIn.dna">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
